Summary of important user-visible changes for version 4.0:
---------------------------------------------------------

 ** The preference

      do_braindead_shortcircuit_evaluation

    is now enabled by default.

 ** Other new functions added in 4.0.0:

    validateattributes

 ** Deprecated functions.

    The following functions were deprecated in Octave 3.6 and have been
    removed from Octave 4.0.
                                           
      cut                polyderiv        
      cor                shell_cmd        
      corrcoef           studentize       
      __error_text__     sylvester_matrix 
      error_text         

    The following functions have been deprecated in Octave 4.0 and will
    be removed from Octave 4.4 (or whatever version is the second major
    release after 4.0):

      do_braindead_shortcircuit_evaluation

---------------------------------------------------------

See NEWS.3 for old news.